[gd_scene load_steps=15 format=3 uid="uid://bqitdl1eh4h7m"]

[ext_resource type="Script" path="res://hud/hud.gd" id="1_2mdw4"]
[ext_resource type="Script" path="res://hud/main_menu.gd" id="1_xcxoq"]
[ext_resource type="Texture2D" uid="uid://0xognk2jpweo" path="res://icon.svg" id="2_hri2u"]
[ext_resource type="Theme" uid="uid://2mbwcaqjb88j" path="res://assets/start.tres" id="3_gu5ei"]
[ext_resource type="Script" path="res://hud/game_hud.gd" id="4_r2doo"]
[ext_resource type="Theme" uid="uid://pdpxbq8lv18f" path="res://assets/build.tres" id="5_pqrno"]
[ext_resource type="Texture2D" uid="uid://cg6jvyxcqghrs" path="res://assets/plusone.png" id="6_vgaq1"]
[ext_resource type="Script" path="res://hud/build_button.gd" id="7_fotr8"]
[ext_resource type="Texture2D" uid="uid://bik1r3h55joav" path="res://assets/plusdamage.png" id="7_iob0m"]
[ext_resource type="LabelSettings" uid="uid://gmgwfwv447cu" path="res://assets/hud.tres" id="8_wln5n"]
[ext_resource type="Texture2D" uid="uid://bok0q2gtv2k6g" path="res://assets/coin.png" id="8_yb605"]
[ext_resource type="Script" path="res://hud/damage_button.gd" id="11_16l53"]
[ext_resource type="Script" path="res://hud/damage_icon.gd" id="11_ki821"]
[ext_resource type="Script" path="res://hud/start_wave_button.gd" id="12_iv2hb"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_2mdw4")

[node name="Main menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_xcxoq")

[node name="TextureRect" type="TextureRect" parent="Main menu"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_hri2u")

[node name="Label" type="Label" parent="Main menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -290.5
offset_right = 290.5
offset_bottom = 175.0
grow_horizontal = 2
text = "BOB THE BUILDER
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Main menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.532
anchor_right = 0.5
anchor_bottom = 0.532
offset_left = -116.0
offset_top = -111.56
offset_right = 36.0001
offset_bottom = 27.44
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme = ExtResource("3_gu5ei")

[node name="GameHud" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 2.0
offset_right = 1920.0
offset_bottom = 1082.0
script = ExtResource("4_r2doo")

[node name="BlockUpgradeContainer" type="HBoxContainer" parent="GameHud"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_left = 1300.0
offset_top = 890.0
offset_right = 1738.0
offset_bottom = 1031.0
alignment = 1

[node name="BlockIcon" type="TextureRect" parent="GameHud/BlockUpgradeContainer"]
layout_mode = 2
texture = ExtResource("6_vgaq1")
expand_mode = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="GameHud/BlockUpgradeContainer"]
layout_mode = 2
stretch_mode = 3

[node name="BuildButton" type="Button" parent="GameHud/BlockUpgradeContainer/AspectRatioContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_pqrno")
text = "                                 "
expand_icon = true
script = ExtResource("7_fotr8")

[node name="coinBuild" type="TextureRect" parent="GameHud/BlockUpgradeContainer"]
layout_mode = 2
texture = ExtResource("8_yb605")
expand_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="GameHud/BlockUpgradeContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="PriceBlock" type="Label" parent="GameHud/BlockUpgradeContainer"]
layout_mode = 2
label_settings = ExtResource("8_wln5n")

[node name="CreateTurret" type="HBoxContainer" parent="GameHud"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_left = 100.0
offset_top = 890.0
offset_right = 538.0
offset_bottom = 1031.0
alignment = 1

[node name="DamageIcon" type="TextureRect" parent="GameHud/CreateTurret"]
layout_mode = 2
texture = ExtResource("7_iob0m")
expand_mode = 2
script = ExtResource("11_ki821")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="GameHud/CreateTurret"]
layout_mode = 2
stretch_mode = 3

[node name="DamageButton" type="Button" parent="GameHud/CreateTurret/AspectRatioContainer"]
layout_mode = 2
theme = ExtResource("5_pqrno")
text = "                                 "
script = ExtResource("11_16l53")

[node name="coinBuild2" type="TextureRect" parent="GameHud/CreateTurret"]
layout_mode = 2
texture = ExtResource("8_yb605")
expand_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="GameHud/CreateTurret"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="PriceAttack" type="Label" parent="GameHud/CreateTurret"]
layout_mode = 2
label_settings = ExtResource("8_wln5n")

[node name="CoinsContainer" type="HBoxContainer" parent="GameHud"]
layout_mode = 0
offset_left = 1469.0
offset_top = 10.0
offset_right = 1743.0
offset_bottom = 141.0

[node name="TextureRect" type="TextureRect" parent="GameHud/CoinsContainer"]
layout_mode = 2
texture = ExtResource("8_yb605")
expand_mode = 2

[node name="CoinLabel" type="Label" parent="GameHud/CoinsContainer"]
layout_mode = 2
label_settings = ExtResource("8_wln5n")

[node name="StartWaveButton" type="Button" parent="GameHud"]
layout_mode = 0
offset_left = 1611.0
offset_top = 414.0
offset_right = 1739.0
offset_bottom = 542.0
theme = ExtResource("3_gu5ei")
script = ExtResource("12_iv2hb")

[node name="HealthContainer" type="HBoxContainer" parent="GameHud"]
layout_mode = 0
offset_left = 50.0
offset_top = 15.0
offset_right = 436.0
offset_bottom = 143.0

[node name="TextureRect" type="TextureRect" parent="GameHud/HealthContainer"]
layout_mode = 2
texture = ExtResource("2_hri2u")

[node name="HealthLabel" type="Label" parent="GameHud/HealthContainer"]
layout_mode = 2
text = "test"
label_settings = ExtResource("8_wln5n")

[node name="Win" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Lose" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="Main menu/Button" to="Main menu" method="_on_button_pressed"]
[connection signal="pressed" from="GameHud/BlockUpgradeContainer/AspectRatioContainer/BuildButton" to="GameHud" method="_on_build_button_pressed"]
[connection signal="pressed" from="GameHud/CreateTurret/AspectRatioContainer/DamageButton" to="GameHud" method="_on_damage_button_pressed"]
[connection signal="pressed" from="GameHud/StartWaveButton" to="GameHud" method="_on_start_wave_button_pressed"]
